@@ -1,3 +1,6 @@
+- fix handling of block-methods of registered objects (El Hombre Gris,
+  messju)
+
 Version 2.6.13 (March 9th, 2006)
 --------------------------------
 
